--- a/src/app/pages/indicadores/indicadores.component.html
+++ b/src/app/pages/indicadores/indicadores.component.html
@@ -64,6 +64,8 @@
                     <dxo-header-filter [visible]="true"></dxo-header-filter>
 
                     <dxi-column dataField="mes" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>
+                    <dxi-column dataField="" caption="" [fixed]="true"></dxi-column>
+                    <dxi-column name="fake" [showInColumnChooser]="false" [fixed]="true" fixedPosition="left" [width]="0.01"></dxi-column>  
 
                     <dxi-column dataField="operacion" caption="Operación" [fixed]="true"></dxi-column>
                     <dxi-column dataField="cuatitlan" caption="Cuautitlan" format="$ #,###,###.##;-$ #,##0.##"></dxi-column>
@@ -76,6 +78,7 @@
                     <dxi-column dataField="total" caption="Total" format="$ #,###,###.##;-$ #,##0.##"></dxi-column>
                     
                     <dxo-summary>
+                        <dxi-group-item column="fake" [alignByColumn]="true"></dxi-group-item>
                         <!-- SUMARY DE GRUPO -->
                         <dxi-group-item column="cuatitlan" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
                         <dxi-group-item column="tultitlan" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
@@ -114,7 +117,9 @@
                         <dxo-header-filter [visible]="true"></dxo-header-filter>
 
                         <dxi-column dataField="mes" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>
-                        
+                        <dxi-column dataField="" caption="" [fixed]="true"></dxi-column>
+                        <dxi-column name="fake" [showInColumnChooser]="false" [fixed]="true" fixedPosition="left" [width]="0.01"></dxi-column>  
+
                         <dxi-column dataField="operacion" caption="Operación" [fixed]="true"></dxi-column>
                         <dxi-column dataField="cuatitlan" caption="Cuautitlan" [format]="separator"></dxi-column>
                         <dxi-column dataField="tultitlan" caption="Tultitlan" [format]="separator"></dxi-column>
@@ -126,6 +131,7 @@
                         <dxi-column dataField="total" caption="Total" [format]="separator"></dxi-column>
 
                         <dxo-summary>
+                            <dxi-group-item column="fake" [alignByColumn]="true"></dxi-group-item>
                             <!-- SUMARY DE GRUPO -->
                             <dxi-group-item column="cuatitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
                             <dxi-group-item column="tultitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
@@ -163,6 +169,8 @@
                         <dxo-header-filter [visible]="true"></dxo-header-filter>
 
                         <dxi-column dataField="mes" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>
+                        <dxi-column dataField="" caption="" [fixed]="true"></dxi-column>
+                        <dxi-column name="fake" [showInColumnChooser]="false" [fixed]="true" fixedPosition="left" [width]="0.01"></dxi-column>  
 
                         <dxi-column dataField="operacion" caption="Operación" [fixed]="true"></dxi-column>
                         <dxi-column dataField="cuatitlan" caption="Cuautitlan" [format]="separator"></dxi-column>
@@ -175,6 +183,7 @@
                         <dxi-column dataField="total" caption="Total" [format]="separator"></dxi-column>
                         
                         <dxo-summary>
+                            <dxi-group-item column="fake" [alignByColumn]="true"></dxi-group-item>
                             <!-- SUMARY DE GRUPO -->
                             <dxi-group-item column="cuatitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
                             <dxi-group-item column="tultitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
@@ -212,6 +221,8 @@
                         <dxo-header-filter [visible]="true"></dxo-header-filter>
 
                         <dxi-column dataField="mes" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>
+                        <dxi-column dataField="" caption="" [fixed]="true"></dxi-column>
+                        <dxi-column name="fake" [showInColumnChooser]="false" [fixed]="true" fixedPosition="left" [width]="0.01"></dxi-column>  
 
                         <dxi-column dataField="operacion" caption="Operación" [fixed]="true"></dxi-column>
                         <dxi-column dataField="cuatitlan" caption="Cuautitlan" [format]="separator"></dxi-column>
@@ -224,6 +235,7 @@
                         <dxi-column dataField="total" caption="Total" [format]="separator"></dxi-column>
                         
                         <dxo-summary>
+                            <dxi-group-item column="fake" [alignByColumn]="true"></dxi-group-item>
                             <!-- SUMARY DE GRUPO -->
                             <dxi-group-item column="cuatitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
                             <dxi-group-item column="tultitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
@@ -304,7 +316,9 @@
                         <dxo-header-filter [visible]="true"></dxo-header-filter>
 
                         <dxi-column dataField="mes" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>
-                        
+                        <dxi-column dataField="" caption="" [fixed]="true"></dxi-column>
+                        <dxi-column name="fake" [showInColumnChooser]="false" [fixed]="true" fixedPosition="left" [width]="0.01"></dxi-column>  
+    
                         <dxi-column dataField="operacion" caption="Operación" [fixed]="true" [width]="150"></dxi-column>
                         <dxi-column dataField="cuatitlan" caption="Cuautitlan" format="$ #,###,###.##;-$ #,##0.##"></dxi-column>
                         <dxi-column dataField="tultitlan" caption="Tultitlan" format="$ #,###,###.##;-$ #,##0.##"></dxi-column>
@@ -316,6 +330,7 @@
                         <dxi-column dataField="total" caption="Total" format="$ #,###,###.##;-$ #,##0.##"></dxi-column>
                         
                         <dxo-summary>
+                            <dxi-group-item column="fake" [alignByColumn]="true"></dxi-group-item>
                             <!-- SUMARY DE GRUPO -->
                             <dxi-group-item column="cuatitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
                             <dxi-group-item column="tultitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
@@ -353,7 +368,9 @@
                         <dxo-header-filter [visible]="true"></dxo-header-filter>
                         
                         <dxi-column dataField="mes" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>
-
+                        <dxi-column dataField="" caption="" [fixed]="true"></dxi-column>
+                        <dxi-column name="fake" [showInColumnChooser]="false" [fixed]="true" fixedPosition="left" [width]="0.01"></dxi-column>  
+    
                         <dxi-column dataField="operacion" caption="Operación" [fixed]="true"></dxi-column>
                         <dxi-column dataField="cuatitlan" caption="Cuautitlan" [format]="separatorKV"></dxi-column>
                         <dxi-column dataField="tultitlan" caption="Tultitlan" [format]="separatorKV"></dxi-column>
@@ -365,6 +382,7 @@
                         <dxi-column dataField="total" caption="Total" [format]="separatorKV"></dxi-column>
                         
                         <dxo-summary>
+                            <dxi-group-item column="fake" [alignByColumn]="true"></dxi-group-item>
                             <!-- SUMARY DE GRUPO -->
                             <dxi-group-item column="cuatitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="separatorKV" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
                             <dxi-group-item column="tultitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="separatorKV" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
@@ -402,7 +420,9 @@
                         <dxo-header-filter [visible]="true"></dxo-header-filter>
                         
                         <dxi-column dataField="mes" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>
-
+                        <dxi-column dataField="" caption="" [fixed]="true"></dxi-column>
+                        <dxi-column name="fake" [showInColumnChooser]="false" [fixed]="true" fixedPosition="left" [width]="0.01"></dxi-column>  
+    
                         <dxi-column dataField="operacion" caption="Operación" [fixed]="true"></dxi-column>
                         <dxi-column dataField="cuatitlan" caption="Cuautitlan" [format]="separatorIV"></dxi-column>
                         <dxi-column dataField="tultitlan" caption="Tultitlan" [format]="separatorIV"></dxi-column>
@@ -414,6 +434,7 @@
                         <dxi-column dataField="total" caption="Total" [format]="separatorIV"></dxi-column>
                         
                         <dxo-summary>
+                            <dxi-group-item column="fake" [alignByColumn]="true"></dxi-group-item>
                             <!-- SUMARY DE GRUPO -->
                             <dxi-group-item column="cuatitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="separatorIV" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
                             <dxi-group-item column="tultitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="separatorIV" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
