--- a/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
+++ b/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
@@ -975,7 +975,7 @@
                 <!-- unidadNegocio -->
                 <dxi-column dataField="unidadNegocio" [groupIndex]="0"></dxi-column>
                 <!-- tipoOperacion -->
-                <dxi-column dataField="tipoOperacion" caption="Operación"></dxi-column>
+                <dxi-column dataField="tipoOperacion" caption="Operación" [fixed]="true"></dxi-column>
 
                 <!-- febMASolicitudCancelacion -->
                 <dxi-column caption="MOVIMIENTOS DE VIAJES DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
@@ -1221,7 +1221,7 @@
                 <!-- unidadNegocio -->
                 <dxi-column dataField="unidadNegocio" [groupIndex]="0"></dxi-column>
                 <!-- tipoOperacion -->
-                <dxi-column dataField="tipoOperacion" caption="Operación"></dxi-column>
+                <dxi-column dataField="tipoOperacion" caption="Operación" [fixed]="true"></dxi-column>
 
                 <!-- febMASolicitudCancelacion -->
                 <dxi-column caption="MOVIMIENTOS DE VIAJES DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
