--- a/src/app/pages/ingresosAnuales/ingresos.component.html
+++ b/src/app/pages/ingresosAnuales/ingresos.component.html
@@ -43,8 +43,8 @@
         <!--====================================Finish chart==========-->
         <br>
 
-        <dx-data-grid #ingresosGrid id="gridContainer2" [dataSource]="indicadores" [height]="570" [showBorders]="true" [columnAutoWidth]="true" (onRowPrepared)="onRowPrepared($event)" (onContentReady)="onContentReady($event)" (onCellPrepared)="onCellPrepared($event)"
-            (onCellClick)="verDetallesClick($event)">
+        <dx-data-grid #ingresosGrid id="gridContainer2" [dataSource]="indicadores" [height]="570" [showBorders]="true" [columnAutoWidth]="true"
+         (onRowPrepared)="onRowPrepared($event)" (onContentReady)="onContentReady($event)" (onCellPrepared)="onCellPrepared($event)" (onCellClick)="verDetallesClick($event)">
             <dxo-scrolling mode="virtual" rowRenderingMode="virtual"></dxo-scrolling>
             <dxo-paging [pageSize]="100"></dxo-paging>
             <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
