orden y fijacion ingresos detalle

--- a/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
+++ b/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
@@ -31,7 +31,7 @@
                 <!-- unidadNegocio -->
                 <dxi-column dataField="unidadNegocio" [groupIndex]="0"></dxi-column>
                 <!-- tipoOperacion -->
-                <dxi-column dataField="tipoOperacion" caption="Operación"></dxi-column>
+                <dxi-column dataField="tipoOperacion" caption="Operación" [fixed]="true"></dxi-column>
 
                 <!-- febMASolicitudCancelacion -->
                 <dxi-column caption="MOVIMIENTOS DE VIAJES DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
@@ -266,7 +266,7 @@
                 <!-- unidadNegocio -->
                 <dxi-column dataField="unidadNegocio" [groupIndex]="0"></dxi-column>
                 <!-- tipoOperacion -->
-                <dxi-column dataField="tipoOperacion" caption="Operación"></dxi-column>
+                <dxi-column dataField="tipoOperacion" caption="Operación" [fixed]="true"></dxi-column>
 
                 <!-- febMASolicitudCancelacion -->
                 <dxi-column caption="MOVIMIENTOS DE VIAJES DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
@@ -494,7 +494,7 @@
                 <!-- unidadNegocio -->
                 <dxi-column dataField="unidadNegocio" [groupIndex]="0"></dxi-column>
                 <!-- tipoOperacion -->
-                <dxi-column dataField="tipoOperacion" caption="Operación"></dxi-column>
+                <dxi-column dataField="tipoOperacion" caption="Operación" [fixed]="true"></dxi-column>
 
                 <!-- febMASolicitudCancelacion -->
                 <dxi-column caption="MOVIMIENTOS DE VIAJES DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
@@ -730,7 +730,7 @@
                 <!-- unidadNegocio -->
                 <dxi-column dataField="unidadNegocio" [groupIndex]="0"></dxi-column>
                 <!-- tipoOperacion -->
-                <dxi-column dataField="tipoOperacion" caption="Operación"></dxi-column>
+                <dxi-column dataField="tipoOperacion" caption="Operación" [fixed]="true"></dxi-column>
 
                 <!-- febMASolicitudCancelacion -->
                 <dxi-column caption="MOVIMIENTOS DE VIAJES DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
