--- a/src/app/pages/indicadores/indicadores.component.html
+++ b/src/app/pages/indicadores/indicadores.component.html
@@ -582,6 +582,7 @@
                     <dxi-column dataField="flete" caption="Flete" format="$ #,###,###.##;-$ #,##0.##" [width]="100"></dxi-column>
                     <dxi-column dataField="diaMes" caption="Día mes" [width]="100"></dxi-column>
                     <dxi-column dataField="toneladas" caption="Toneladas" [width]="100"></dxi-column>
+                    <dxi-column dataField="dolly" caption="Dolly" [width]="100"></dxi-column>
                     
                     
 
