--- a/src/app/pages/rentabilidadViajes/rentabilidadViajes.component.html
+++ b/src/app/pages/rentabilidadViajes/rentabilidadViajes.component.html
@@ -1,4 +1,4 @@
-<h2 class="content-block">Rentabilidad Contable</h2>
+<h2 class="content-block">Rentabilidad Vajes</h2>
 
 <!-- Card principal  -->
 <div class="content-block dx-card responsive-paddings padding-10">
