--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -143,8 +143,8 @@
             <dxi-column dataField="saldO_SIN_CCOBRO" caption="SALDO SIN COBRO" [width]="160" [format]="separator"></dxi-column>
             <dxi-column dataField="totaL_INTEGRADO" caption="TOTAL INTEGRADO" [width]="160" [format]="separator"></dxi-column>
             <dxi-column dataField="diaS_DE_CREDITO" caption="DÍAS DE CRÉDITO" [width]="150"></dxi-column>
-            <dxi-column dataField="f_CARTACROBRO" caption="FECHA CARTA COBRO" dataType="date" format="dd/mm/yyyy" [width]="160"></dxi-column> 
-            <dxi-column dataField="" caption="FECHA DE CIERRE" dataType="date" format="dd/mm/yyyy" [width]="160" ></dxi-column>
+            <dxi-column dataField="f_CARTACROBRO" caption="FECHA CARTA COBRO" dataType="date" format="dd/mm/yyyy" [width]="160"></dxi-column>
+            <dxi-column dataField="fechaCierre" caption="FECHA DE CIERRE" dataType="date" format="dd/mm/yyyy" [width]="160" ></dxi-column>
             <dxi-column dataField="fechA_VENCIMIENTO" caption="FECHA VENCIMIENTO" dataType="date" format="dd/mm/yyyy" [width]="160"></dxi-column>
             <dxi-column dataField="" caption="DÍAS TRANSCURRIDOS" [width]="150"></dxi-column>
 
