--- a/src/app/pages/rentabilidadViajes/rentabilidadViajes.component.html
+++ b/src/app/pages/rentabilidadViajes/rentabilidadViajes.component.html
@@ -129,15 +129,17 @@
         
         <dxi-column dataField="unidadNegocio" caption="Unidad Negocio" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="0"></dxi-column>
         <dxi-column dataField="tractoOperador" caption="Tracto" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="1"></dxi-column>
+        <dxi-column dataField="noLiquidacion" caption="Liquidación" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="2"></dxi-column>
+
         <dxi-column dataField="operador" caption="Operador" [fixed]="true" headerCellTemplate="headerTemplate" [width]="5"></dxi-column>
 
-        <dxi-column dataField="viajes" caption="No. Viaje" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
+        <dxi-column dataField="noviaje" caption="No. Viaje" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
 
         <dxi-column dataField="tipoViaje" caption="Tipo Viaje" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="tipoSegumiento" caption="Tipo Seguimiento" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="ruta" caption="Ruta" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
 
-        <dxi-column dataField="noLiquidacion" caption="Liquidación" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
+
         <dxi-column dataField="inicio" caption="Inicio" format="dd-MM-yy HH:mm" type="date" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="fin" caption="Fin" [fixed]="false" format="dd-MM-yy HH:mm" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="ingresoTotal" caption="Ingreso Total" [fixed]="false" format="$ #,##0.##;-$ #,##0.##" headerCellTemplate="headerTemplate" cellTemplate="cellTemplateBold"></dxi-column>
