actualizacion rentabilidad viajes

--- a/src/app/pages/rentabilidadViajes/rentabilidadViajes.component.html
+++ b/src/app/pages/rentabilidadViajes/rentabilidadViajes.component.html
@@ -134,7 +134,7 @@
         <dxi-column dataField="operador" caption="Operador" [fixed]="true" headerCellTemplate="headerTemplate" [width]="5"></dxi-column>
 
         <dxi-column dataField="noviaje" caption="No. Viaje" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
-
+        <dxi-column dataField="operacion" caption="Operación" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="tipoViaje" caption="Tipo Viaje" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="tipoSegumiento" caption="Tipo Seguimiento" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="ruta" caption="Ruta" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
