--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -146,7 +146,7 @@
             <dxi-column dataField="f_CARTACROBRO" caption="FECHA CARTA COBRO" dataType="date" format="dd/mm/yyyy" [width]="160"></dxi-column>
             <dxi-column dataField="fechaCierre" caption="FECHA DE CIERRE" dataType="date" format="dd/mm/yyyy" [width]="160" ></dxi-column>
             <dxi-column dataField="fechA_VENCIMIENTO" caption="FECHA VENCIMIENTO" dataType="date" format="dd/mm/yyyy" [width]="160"></dxi-column>
-            <dxi-column dataField="" caption="DÍAS TRANSCURRIDOS" [width]="150"></dxi-column>
+            <dxi-column dataField="diasVencimiento" caption="DÍAS TRANSCURRIDOS" alignment="right" [width]="200"></dxi-column>
 
             <!-- <dxi-column dataField="remision" caption="REMISIÓN" [width]="250"></dxi-column>
             <dxi-column dataField="referencia" caption="REFERENCIA" [width]="100"></dxi-column> 
