--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -144,9 +144,9 @@
             <dxi-column dataField="totaL_INTEGRADO" caption="TOTAL INTEGRADO" [width]="160" [format]="separator"></dxi-column>
             <dxi-column dataField="diaS_DE_CREDITO" caption="DÍAS DE CRÉDITO" [width]="150"></dxi-column>
             <dxi-column dataField="f_CARTACROBRO" caption="CARTA COBRO" dataType="date" format="dd/mm/yyyy" [width]="160"></dxi-column>
-            <dxi-column dataField="fechaCierre" caption="CIERRE" dataType="date" format="dd/mm/yyyy" [width]="160" ></dxi-column>
-            <dxi-column dataField="fechA_VENCIMIENTO" caption="VENCIMIENTO" dataType="date" format="dd/mm/yyyy" [width]="160"></dxi-column>
-            <dxi-column dataField="diasVencimiento" caption="DÍAS TRANSCURRIDOS" alignment="right" [width]="200"></dxi-column>
+            <dxi-column dataField="fechaCierre" caption="CIERRE" dataType="date" format="dd/mm/yyyy" [width]="140" ></dxi-column>
+            <dxi-column dataField="fechA_VENCIMIENTO" caption="VENCIMIENTO" dataType="date" format="dd/mm/yyyy" [width]="140"></dxi-column>
+            <dxi-column dataField="diasVencimiento" caption="VENCIDOS" alignment="right" [width]="100"></dxi-column>
 
             <!-- <dxi-column dataField="remision" caption="REMISIÓN" [width]="250"></dxi-column>
             <dxi-column dataField="referencia" caption="REFERENCIA" [width]="100"></dxi-column> 
